# SmartControlX

./: DESIGN.md  README.md
.github/workflows/: android_build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  network_manager.cpp  network_manager.h  video_encoder.cpp  video_encoder.h
android/app/src/main/java/com/smartcontrolx/: MainActivity.kt  SmartControlXService.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
client/: AutoDiscovery.py  ControlSender.py  SmartControlX.py  StreamReceiver.py  requirements.txt  settings.json
